# py_polymer

./: ._README.md  LICENSE  README.md  pyproject.toml
examples/: Sim_Batch.py  Sim_CSTR.py  Sim_PFR.py
src/pypoly/: __init__.py  pyPoly.py
src/pypoly_reactor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
