[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pypoly-reactor"
version = "0.1.0"
description = "Polymerization reactor modeling package using the method of moments"
readme = "README.md"
requires-python = ">=3.10"

authors = [{ name = "Dabin Yang" }]

license = "MIT"

keywords = [
    "polymerization",
    "reactor modeling",
    "method of moments",
    "chemical engineering",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

dependencies = ["numpy>=1.24", "scipy>=1.10", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]
